--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,4 @@
 <h1>List of all students</h1>
-<% @students.each do |student|  %>
-<%= student %>
+<% @students.uniq.each do |student|  %>
+<%= student.to_s  %>
 <% end %>
