--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Students</h2>
 <h4>
   <%@students.each do |student|%>
-  <%="#{student.first_name}" + "#{student.last_name}"%>
+  <%="#{student.first_name} " + "#{student.last_name}"%><p>
   <%end%>
 </h4>
